--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,15 +1,18 @@
 <%= form_for [@company, @job] do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %> <br>
 
   <%= f.label :description %>
-  <%= f.text_field :description %>
+  <%= f.text_field :description %> <br>
 
   <%= f.label :level_of_interest %>
-  <%= f.number_field :level_of_interest %>
+  <%= f.select :level_of_interest, options_for_select(1..10) %> <br>
 
   <%= f.label :city %>
-  <%= f.text_field :city %>
+  <%= f.text_field :city %> <br>
+
+  <%= f.label :category_id %>
+  <%= f.collection_select :category_id, Category.all, :id, :title, :required => true %>
 
   <%= f.submit %>
 <% end %>
