categories features are working

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,8 @@
-<h2>Create a new company here!</h2>
+<div class="page-header">
+  <h2>Create a new company here!</h2>
+</div>
 
-<%= render partial: "form" %>
+<div class="container">
+  <%= render partial: "form" %>
+</div>
 
