--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,17 @@
-<h3>All Companies</h3>
-
-<% @companies.each do |company| %>
-  <div class=company_<%= company.id %>>
-    <%= link_to company.name, company_path(company) %><br>
-    <%= link_to "Edit", edit_company_path(company) %>
-    <%= link_to "Delete", company_path(company), method: "delete" %>
+<div class="container">
+  <div class="page-header">
+    <h2>All Companies</h2>
   </div>
-<% end %>
+
+  <div class="btn-toolbar pull-right">
+    <%= link_to 'Create a New Company', new_company_path, class: 'btn btn-default' %>
+  </div>
+
+  <% @companies.each do |company| %>
+    <div class=company_<%= company.id %>>
+      <%= link_to company.name, company_path(company) %><br>
+      <%= link_to "Edit", edit_company_path(company), class: 'btn btn-warning btn-xs' %>
+      <%= link_to "Delete", company_path(company), method: "delete", class: 'btn btn-danger btn-xs' %>
+    </div>
+  <% end %>
+</div>
