contact spec is working with validations & relationship w company

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -10,3 +10,10 @@ All Jobs for <strong><%= @company.name %></strong> <br>
     </div>
   </ul>
 <% end %>
+
+<div class="col-md-12 contacts">
+  <h3>Contacts at <%= @company.name %></h3>
+  <% @contacts.each do |contact| %>
+      <p><%= contact.first_name %> <%= contact.last_name %>, <%= contact.position %> - <%= contact.email %> </p>
+  <% end %>
+</div>
