--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -7,11 +7,13 @@
     <%= link_to 'Create a New Company', new_company_path, class: 'btn btn-default' %>
   </div>
 
-  <% @companies.each do |company| %>
-    <div class=company_<%= company.id %>>
-      <%= link_to company.name, company_path(company) %><br>
-      <%= link_to "Edit", edit_company_path(company), class: 'btn btn-warning btn-xs' %>
-      <%= link_to "Delete", company_path(company), method: "delete", class: 'btn btn-danger btn-xs' %>
-    </div>
-  <% end %>
+  <div class="col-md-12 companies">
+    <% @companies.each do |company| %>
+      <h4> <%= link_to company.name, company_path(company) %></h4>
+      <div class='btn-toolbar' role="toolbar" <%= company.id %>>
+        <%= link_to "Edit", edit_company_path(company), class: 'btn btn-warning btn-xs' %>
+        <%= link_to "Delete", company_path(company), method: "delete", class: 'btn btn-danger btn-xs' %>
+      </div>
+    <% end %>
+  </div>
 </div>
