--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,17 +1,37 @@
-<h3>Create a new contact for this company</h3>
+<div class="page-header">
+  <h3>Create a new contact for this company</h3>
+</div>
 
-<%= form_for [@company, @contact] do |f| %>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
-
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
-
-  <%= f.label :position %>
-  <%= f.text_field :position %>
-
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-
-  <%= f.submit %>
-<% end %>
+<div class="container">
+<%= form_for [@company, @contact], html: {class: 'form-horizontal'} do |f| %>
+  <div class="field form-group">
+    <%= f.label :first_name, 'First name', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_field :first_name, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="field form-group">
+      <%= f.label :last_name, 'Last name', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_field :last_name, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="field form-group">
+      <%= f.label :position, 'position', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_field :position, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="field form-group">
+      <%= f.label :email, 'email', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-6">
+      <%= f.text_field :email, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="actions form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
+  </div>
+  <% end %>
+</div>
