--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,16 +1,17 @@
 
 <div class="container">
   <div class="page-header">
-    <h3>All Tags</h3>
     <div class="btn-toolbar pull-right">
       <%= link_to 'Create a new a Tag', new_tag_path, class: 'btn btn-default' %>
     </div>
+    <h3>All Tags</h3>
   </div>
 
 <% @tags.each do |tag| %>
-  <%= tag.title %>
-    <%#= link_to 'Edit', edit_tag_path(tag), class: 'btn btn-warning' %>
-    <%= link_to 'Delete', tag_path(tag), method: 'delete', class: 'btn btn-danger' %>
+  <%= link_to tag.title , tag_path(tag) %>
+
+  <%= link_to 'Edit', edit_tag_path(tag), class: 'btn btn-warning btn-xs' %>
+  <%= link_to 'Delete', tag_path(tag), method: 'delete', class: 'btn btn-danger btn-xs' %>
 <% end %>
 </div>
 
